Adicionei responsividade a tela

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ a{
     text-decoration: none;
     color: #222;
 }
+
+/* Cabeçalho com os ícones que levam para o instagram */
+
 header {
     display: flex;
     justify-content: center;
@@ -27,6 +30,7 @@ header > img{
     width: 200px;
 }
 
+/* Container com os blocos em grid */
 
 .container {
     display: grid;
@@ -42,6 +46,8 @@ header > img{
                          'foot foot foot foot';    
 }
 
+/* Título da página */
+
 main {
     grid-area: main;
     font-family: Lato,sans-serif;
@@ -51,6 +57,8 @@ main {
     font-weight: 600;
     cursor: pointer;
 }
+
+/* Caixas das opções de carro */
 
 .small-box1 {
     grid-area: box1;
@@ -136,6 +144,9 @@ li:hover{
 h3:hover {
     color: white;
 }
+
+/* Aside com aviso de IMPORTANTE */
+
 aside {
     grid-area: side;
     display: flex;
@@ -180,3 +191,40 @@ footer{
     padding: 50px;
     font-size: 14px;
 }
+
+/* Resposividade para Iphone 6/7/8 */
+
+@media only screen and (max-width: 600px) {
+    * {
+      box-sizing: border-box;
+    }
+
+    header > a{
+        display: none;
+    }
+    .container {
+      width: 100%;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+    }
+
+    main{
+        text-align: center;
+    }
+  
+    footer {
+      display: flex;
+      justify-content: space-evenly;
+      bottom: 0;
+      left: 0;
+      z-index: 1;
+      background-color: #ffffff;
+      border: 1px solid #dbdbdb;
+      height: 54px;
+      width: 100%;
+      align-items: center;
+    }
+  }
+ 
+  
